--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link type="text/plain" rel="author" href="http://holo.moe/humans.txt" />
 
-		<link rel="stylesheet" href="css/normalize.min.css">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="assets/css/normalize.min.css">
+		<link rel="stylesheet" href="assets/css/boilerplate.css">
+		<link rel="stylesheet" href="assets/css/main.css">
 
 		<!--[if lt IE 9]>
 			<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-			<script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
+			<script>window.html5 || document.write('<script src="assets/js/vendor/html5shiv.js"><\/script>')</script>
 		<![endif]-->
 
 		<!-- No Javascript here! At least not yet anyway... -->
@@ -30,7 +31,10 @@
 			<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 
-		<div class="header-container">
+		<div id="main">
+		</div>
+
+		<!--<div class="header-container">
 			<header class="wrapper clearfix">
 				<h1 class="title">h1.title</h1>
 				<nav>
@@ -70,21 +74,21 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
 				</aside>
 
-			</div> <!-- #main -->
-		</div> <!-- #main-container -->
+			</div>
+		</div>
 
 		<div class="footer-container">
 			<footer class="wrapper">
 				<h3>footer</h3>
 			</footer>
-		</div>
+		</div>-->
 
 
 		<!-- JAVASCRIPT BELOW -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+		<script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-		<script src="js/main.js"></script>
+		<script src="assets/js/main.js"></script>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
