--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,8 +15,8 @@
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link type="text/plain" rel="author" href="http://holo.moe/humans.txt" />
 
-		<link rel="stylesheet" href="assets/css/normalize.min.css">
-		<link rel="stylesheet" href="assets/css/boilerplate.css">
+		<link rel="stylesheet" href="assets/css/vendor/normalize.min.css">
+		<link rel="stylesheet" href="assets/css/vendor/boilerplate.css">
 		<link rel="stylesheet" href="assets/css/main.css">
 
 		<!--[if lt IE 9]>
@@ -27,11 +27,25 @@
 		<!-- No Javascript here! At least not yet anyway... -->
 	</head>
 	<body>
+		<div id="overlay"></div>
 		<!--[if lt IE 8]>
 			<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 
-		<div id="main">
+		<!-- IDEA: Might get rid of the whole header and just go with a footer similar to what I have at the moment -->
+		<div id="main" class='wrapper'>
+			<header>
+				<div id="logo"></div>
+				
+				<!-- LOGO --><!-- HOME || HISTORY || ABOUT -->
+			</header>
+			<article>
+				<!-- IMAGE -->
+				<!-- IMAGE INFO || ARTIST INFO -->
+			</article>
+			<footer>
+				<!-- ??? -->
+			</footer>
 		</div>
 
 		<!--<div class="header-container">
