--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 		<link rel="stylesheet" href="assets/css/vendor/normalize.min.css">
 		<link rel="stylesheet" href="assets/css/vendor/boilerplate.css">
-		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet/less" href="assets/css/main.less" />
+		<!--<link rel="stylesheet" href="assets/css/main.css">-->
 
 		<!--[if lt IE 9]>
 			<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -33,20 +34,27 @@
 		<![endif]-->
 
 		<!-- IDEA: Might get rid of the whole header and just go with a footer similar to what I have at the moment -->
-		<div id="main" class='wrapper'>
+		<div id="main">
+			<article>
+				<img id='main-image' src='assets/img/bdf61f5957e0018d28176b22f7a876fa.jpg' />
+				<!-- IMAGE INFO || ARTIST INFO -->
+			</article>
+		</div>
+		<!--<div id="main" class='wrapper'>
 			<header>
 				<div id="logo"></div>
 				
-				<!-- LOGO --><!-- HOME || HISTORY || ABOUT -->
+				<!-- LOGO --><!-- HOME || HISTORY || ABOUT
 			</header>
 			<article>
-				<!-- IMAGE -->
-				<!-- IMAGE INFO || ARTIST INFO -->
+				<div id='main-image'><img src='assets/img/bdf61f5957e0018d28176b22f7a876fa.jpg' /></div>
+				<!-- IMAGE 
+				<!-- IMAGE INFO || ARTIST INFO
 			</article>
 			<footer>
-				<!-- ??? -->
+				<!-- ??? 
 			</footer>
-		</div>
+		</div> -->
 
 		<!--<div class="header-container">
 			<header class="wrapper clearfix">
@@ -101,6 +109,10 @@
 		<!-- JAVASCRIPT BELOW -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+		<script>less = {env: "development"};</script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.3.1/less.min.js"></script>
+		<script>less.version || document.write('<script src="assets/js/vendor/less.min.js"><\/script>')</script>
 
 		<script src="assets/js/main.js"></script>
 
