--- a/index.html
+++ b/index.html
@@ -36,75 +36,32 @@
 		<!-- IDEA: Might get rid of the whole header and just go with a footer similar to what I have at the moment -->
 		<div id="main">
 			<article>
-				<img id='main-image' src='assets/img/bdf61f5957e0018d28176b22f7a876fa.jpg' />
+				<img id='image' src='assets/img/bdf61f5957e0018d28176b22f7a876fa.jpg' />
+				<!-- IDEA: We could have the title as a caption below the image. It does make it difficult to include artist links though. -->
 				<!-- IMAGE INFO || ARTIST INFO -->
 			</article>
-		</div>
-		<!--<div id="main" class='wrapper'>
-			<header>
-				<div id="logo"></div>
-				
-				<!-- LOGO --><!-- HOME || HISTORY || ABOUT
-			</header>
-			<article>
-				<div id='main-image'><img src='assets/img/bdf61f5957e0018d28176b22f7a876fa.jpg' /></div>
-				<!-- IMAGE 
-				<!-- IMAGE INFO || ARTIST INFO
-			</article>
 			<footer>
-				<!-- ??? 
+				<div id='image-info'>
+					<!--Week: <span>47/52</span>-->
+					<div id='image-title'><a href="http://ajisaidenden.blog89.fc2.com/blog-entry-181.html">HARVEST Coloured Insert Page (pg23)</a></div>
+					<div id='image-artist'>
+						<div id='image-artist-name'> - <span id='inline-name'>Kawakami Rokkaku</span></div>
+						<!--<ul id='image-artist-links'>
+							<li><a href="http://ajisaidenden.x.fc2.com/" class="homepage"></a></li>
+							<li><a href="http://ajisaidenden.blog89.fc2.com/" class="blog"></a></li>
+							<li><a href="http://twitter.com/kawakamirokkaku" class="twitter"></a></li>
+							<li><a href="http://www.pixiv.net/member.php?id=215983" class="pixiv"></a></li>
+							<li><a href="http://nijie.info/members.php?id=24007" class="nijie"></a></li>
+							<li><a href="http://kawakami6kaku.tumblr.com/" class="tumblr"></a></li>
+							<li><a href="http://c10018277.circle.ms/oc/CircleProfile.aspx" class="circlems"></a></li>
+							<li><a href="http://doujinshi.mugimugi.org/browse/author/42821/" class="doujinshi"></a></li>
+						</ul>-->
+					</div>
+				</div>
+
+				<div id='footer-nav'></div>
 			</footer>
-		</div> -->
-
-		<!--<div class="header-container">
-			<header class="wrapper clearfix">
-				<h1 class="title">h1.title</h1>
-				<nav>
-					<ul>
-						<li><a href="#">nav ul li a</a></li>
-						<li><a href="#">nav ul li a</a></li>
-						<li><a href="#">nav ul li a</a></li>
-					</ul>
-				</nav>
-			</header>
 		</div>
-
-		<div class="main-container">
-			<div class="main wrapper clearfix">
-
-				<article>
-					<header>
-						<h1>article header h1</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-					</header>
-					<section>
-						<h2>article section h2</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-					</section>
-					<section>
-						<h2>article section h2</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-					</section>
-					<footer>
-						<h3>article footer h3</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-					</footer>
-				</article>
-
-				<aside>
-					<h3>aside</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-				</aside>
-
-			</div>
-		</div>
-
-		<div class="footer-container">
-			<footer class="wrapper">
-				<h3>footer</h3>
-			</footer>
-		</div>-->
-
 
 		<!-- JAVASCRIPT BELOW -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
