--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 				<!-- IMAGE INFO || ARTIST INFO -->
 			</article>
 			<footer>
+				<div id='footer-pagenav'>
+					<!-- NOTE: These links are generated, and can be disabled. -->
+					<span id='pagenav-prev'><a href='#'><</a></span>
+					<span id='pagenav-next'><a href='#'>></a></span>
+				</div>
+
 				<div id='image-info'>
 					<!--Week: <span>47/52</span>-->
 					<div id='image-title'><a href="http://ajisaidenden.blog89.fc2.com/blog-entry-181.html">HARVEST Coloured Insert Page (pg23)</a></div>
@@ -57,15 +63,15 @@
 
 									<ul id='image-artist-links'>
 										<li><span class="a-homepage"><a href="http://ajisaidenden.x.fc2.com/"></a></span></li>
-										<li><span class="a-blog"><a href="http://ajisaidenden.blog89.fc2.com/"></a></li>
-										<li><span class="a-twitter"><a href="http://twitter.com/kawakamirokkaku"></a></li>
-										<li><span class="a-pixiv"><a href="http://www.pixiv.net/member.php?id=215983"></a></li>
-										<li><span class="a-nijie"><a href="http://nijie.info/members.php?id=24007"></a></li>
-										<li><span class="a-tumblr"><a href="http://kawakami6kaku.tumblr.com/"></a></li>
-										<li><span class="a-circlems"><a href="http://c10018277.circle.ms/oc/CircleProfile.aspx"></a></li>
-										<li><span class="a-doujinshi"><a href="http://doujinshi.mugimugi.org/browse/author/42821/"></a></li>
-										<li><span class="a-toranoana"><a href="http://www.toranoana.jp/mailorder/cot/author/21/c0eebee520cfbbb3d1_01.html"></a></li>
-										<li><span class="a-melonbooks"><a href="http://www.melonbooks.com/?main_page=maker_info&makers_id=MK0000007408"></a></li>
+										<li><span class="a-blog"><a href="http://ajisaidenden.blog89.fc2.com/"></a></span></li>
+										<li><span class="a-twitter"><a href="http://twitter.com/kawakamirokkaku"></a></span></li>
+										<li><span class="a-pixiv"><a href="http://www.pixiv.net/member.php?id=215983"></a></span></li>
+										<li><span class="a-nijie"><a href="http://nijie.info/members.php?id=24007"></a></span></li>
+										<li><span class="a-tumblr"><a href="http://kawakami6kaku.tumblr.com/"></a></span></li>
+										<li><span class="a-circlems"><a href="http://c10018277.circle.ms/oc/CircleProfile.aspx"></a></span></li>
+										<li><span class="a-doujinshi"><a href="http://doujinshi.mugimugi.org/browse/author/42821/"></a></span></li>
+										<li><span class="a-toranoana"><a href="http://www.toranoana.jp/mailorder/cot/author/21/c0eebee520cfbbb3d1_01.html"></a></span></li>
+										<li><span class="a-melonbooks"><a href="http://www.melonbooks.com/?main_page=maker_info&makers_id=MK0000007408"></a></span></li>
 									</ul>
 									<div id='thnks-footer'>Thanks to the folks over @ Danbooru for gathering most of this info.</div>
 								</div>
